- support generate collection, object dto, requestdto don't inherit form model object
